miniProyecto/pypar.output
Terminales no usados en gramática

   ESPTAB
   OPERADOR
   CLASS
   FINALLY
   NONE
   LAMBDA
   TRY
   DEF
   FROM
   NONLOCAL
   GLOBAL
   WITH
   AS
   YIELD
   ASSERT
   IMPORT
   EXCEPT
   RAISE
   EXEC
   ENETILDE
   DASTERISCO
   APAREN
   CPAREN
   ACORCHETE
   CCORCHETE
   ALLAVE
   CLLAVE
   PUNTO
   AT
   MENOSMAYOR
   CSIMPLE
   IDIAG
   GATO
   DIDIAG
   SALIDA
   FIN


Estado 66 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: GOAL $end

    1 GOAL: file_input

    2 file_input: file_input NEWLINE
    3           | stmt file_input
    4           | %empty

    5 stmt: simple_stmt
    6     | compound_stmt

    7 simple_stmt: small_stmt r1 NEWLINE

    8 r1: simple_stmt_aux ss_aux

    9 ss_aux: PCOMA
   10       | %empty

   11 simple_stmt_aux: simple_stmt_aux PCOMA small_stmt
   12                | %empty

   13 small_stmt: expr_stmt
   14           | print_stmt
   15           | del_stmt
   16           | pass_stmt
   17           | flow_stmt

   18 expr_stmt: testlist expr_stmt_aux_b

   19 expr_stmt_aux_b: augassign testlist
   20                | expr_stmt_aux_b_a

   21 expr_stmt_aux_b_a: IGUAL testlist
   22                  | %empty

   23 augassign: MASIGUAL
   24          | MENOSIGUAL
   25          | ASTIGUAL
   26          | DIAIGUAL
   27          | PORIGUAL
   28          | AMPIGUAL
   29          | PIPEIGUAL
   30          | CIRCIGUAL
   31          | DMENORIGUAL
   32          | DMAYORIGUAL
   33          | DASTIGUAL
   34          | DDIAIGUAL

   35 print_stmt: PRINT s29

   36 s29: s30
   37    | DMAYOR test s31

   38 s30: test s32 comaS
   39    | %empty

   40 s31: COMA test comaS
   41    | %empty

   42 s32: s32 COMA test
   43    | %empty

   44 comaS: COMA
   45      | %empty

   46 del_stmt: DEL exprlist

   47 pass_stmt: PASS

   48 flow_stmt: break_stmt
   49          | continue_stmt
   50          | return_stmt

   51 break_stmt: BREAK

   52 continue_stmt: CONTINUE

   53 return_stmt: RETURN return_stmt_aux

   54 return_stmt_aux: testlist
   55                | %empty

   56 compound_stmt: if_stmt
   57              | while_stmt
   58              | for_stmt

   59 if_stmt: IF test DPUNTO suite if_stmt_aux s8

   60 if_stmt_aux: if_stmt_aux ELIF test DPUNTO suite
   61            | %empty

   62 s8: ELSE DPUNTO suite
   63   | %empty

   64 while_stmt: WHILE test DPUNTO suite s8

   65 for_stmt: FOR exprlist IN testlist DPUNTO suite s8

   66 suite: simple_stmt
   67      | NEWLINE INDENT suite_aux DEDENT

   68 suite_aux: suite_aux stmt
   69          | stmt

   70 s15: IF or_test ELSE test
   71    | %empty

   72 test: or_test s15

   73 or_test: and_test or_test_aux

   74 or_test_aux: or_test_aux OR and_test
   75            | %empty

   76 and_test: not_test and_test_aux

   77 and_test_aux: and_test_aux AND not_test
   78             | %empty

   79 not_test: NOT not_test
   80         | comparison

   81 comparison: expr comparison_aux

   82 comparison_aux: comparison_aux comp_op expr
   83               | %empty

   84 comp_op: MENOR
   85        | MAYOR
   86        | DIGUAL
   87        | MAIGUAL
   88        | MEIGUAL
   89        | MENORMAYOR
   90        | NIGUAL
   91        | IN
   92        | NOT IN
   93        | IS
   94        | IS NOT

   95 expr: xor_expr expr_aux

   96 expr_aux: expr_aux PIPE xor_expr
   97         | %empty

   98 xor_expr: and_expr xor_expr_aux

   99 xor_expr_aux: xor_expr_aux CIRCUNFLEJO and_expr
  100             | %empty

  101 and_expr: shift_expr and_expr_aux

  102 and_expr_aux: and_expr_aux AMPERSON shift_expr
  103             | %empty

  104 shift_expr: arith_expr shift_expr_aux

  105 shift_expr_aux: shift_expr_aux DMENOR arith_expr
  106               | shift_expr_aux DMAYOR arith_expr
  107               | %empty

  108 arith_expr: term arith_expr_aux

  109 arith_expr_aux: arith_expr_aux ae_aux term
  110               | %empty

  111 ae_aux: MAS
  112       | MENOS

  113 term: factor term_aux

  114 term_aux: term_aux t_aux factor
  115         | %empty

  116 t_aux: ASTERISCO
  117      | DIAG
  118      | PORCEN
  119      | DDIAG

  120 factor: ae_aux factor
  121       | atom

  122 atom: IDENTIFICADOR
  123     | FLOTANTE
  124     | ENTERO
  125     | string_aux
  126     | TRUE
  127     | FALSE

  128 string_aux: string_aux STRING
  129           | STRING

  130 exprlist: expr exprlist_aux comaS

  131 exprlist_aux: exprlist_aux COMA expr
  132             | %empty

  133 testlist: test testlist_aux comaS

  134 testlist_aux: testlist_aux COMA test
  135             | %empty


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
STRING (258) 128 129
ESPTAB (259)
OPERADOR (260)
IDENTIFICADOR (261) 122
PRINT (262) 35
FALSE (263) 127
CLASS (264)
FINALLY (265)
IS (266) 93 94
RETURN (267) 53
NONE (268)
CONTINUE (269) 52
FOR (270) 65
LAMBDA (271)
TRY (272)
TRUE (273) 126
DEF (274)
FROM (275)
NONLOCAL (276)
WHILE (277) 64
AND (278) 77
DEL (279) 46
GLOBAL (280)
NOT (281) 79 92 94
WITH (282)
AS (283)
ELIF (284) 60
IF (285) 59 70
OR (286) 74
YIELD (287)
ASSERT (288)
ELSE (289) 62 70
IMPORT (290)
PASS (291) 47
BREAK (292) 51
EXCEPT (293)
IN (294) 65 91 92
RAISE (295)
EXEC (296)
NIGUAL (297) 90
DIGUAL (298) 86
MAIGUAL (299) 87
MEIGUAL (300) 88
MAYOR (301) 85
MENOR (302) 84
ENETILDE (303)
CIRCUNFLEJO (304) 99
PIPE (305) 96
AMPERSON (306) 102
DMAYOR (307) 37 106
DMENOR (308) 105
PORCEN (309) 118
DDIAG (310) 119
DIAG (311) 117
DASTERISCO (312)
ASTERISCO (313) 116
MENOS (314) 112
MAS (315) 111
APAREN (316)
CPAREN (317)
ACORCHETE (318)
CCORCHETE (319)
ALLAVE (320)
CLLAVE (321)
COMA (322) 40 42 44 131 134
DPUNTO (323) 59 60 62 64 65
PUNTO (324)
PCOMA (325) 9 11
AT (326)
IGUAL (327) 21
MENOSMAYOR (328)
MASIGUAL (329) 23
MENOSIGUAL (330) 24
ASTIGUAL (331) 25
DIAIGUAL (332) 26
DDIAIGUAL (333) 34
PORIGUAL (334) 27
AMPIGUAL (335) 28
PIPEIGUAL (336) 29
CIRCIGUAL (337) 30
DMAYORIGUAL (338) 32
DMENORIGUAL (339) 31
DASTIGUAL (340) 33
MENORMAYOR (341) 89
CSIMPLE (342)
IDIAG (343)
GATO (344)
DIDIAG (345)
NEWLINE (346) 2 7 67
ENTERO (347) 124
FLOTANTE (348) 123
INDENT (349) 67
SALIDA (350)
DEDENT (351) 67
FIN (352)


No terminales con las reglas donde aparecen

$accept (98)
    en la izquierda: 0
GOAL (99)
    en la izquierda: 1, en la derecha: 0
file_input (100)
    en la izquierda: 2 3 4, en la derecha: 1 2 3
stmt (101)
    en la izquierda: 5 6, en la derecha: 3 68 69
simple_stmt (102)
    en la izquierda: 7, en la derecha: 5 66
r1 (103)
    en la izquierda: 8, en la derecha: 7
ss_aux (104)
    en la izquierda: 9 10, en la derecha: 8
simple_stmt_aux (105)
    en la izquierda: 11 12, en la derecha: 8 11
small_stmt (106)
    en la izquierda: 13 14 15 16 17, en la derecha: 7 11
expr_stmt (107)
    en la izquierda: 18, en la derecha: 13
expr_stmt_aux_b (108)
    en la izquierda: 19 20, en la derecha: 18
expr_stmt_aux_b_a (109)
    en la izquierda: 21 22, en la derecha: 20
augassign (110)
    en la izquierda: 23 24 25 26 27 28 29 30 31 32 33 34, en la derecha:
    19
print_stmt (111)
    en la izquierda: 35, en la derecha: 14
s29 (112)
    en la izquierda: 36 37, en la derecha: 35
s30 (113)
    en la izquierda: 38 39, en la derecha: 36
s31 (114)
    en la izquierda: 40 41, en la derecha: 37
s32 (115)
    en la izquierda: 42 43, en la derecha: 38 42
comaS (116)
    en la izquierda: 44 45, en la derecha: 38 40 130 133
del_stmt (117)
    en la izquierda: 46, en la derecha: 15
pass_stmt (118)
    en la izquierda: 47, en la derecha: 16
flow_stmt (119)
    en la izquierda: 48 49 50, en la derecha: 17
break_stmt (120)
    en la izquierda: 51, en la derecha: 48
continue_stmt (121)
    en la izquierda: 52, en la derecha: 49
return_stmt (122)
    en la izquierda: 53, en la derecha: 50
return_stmt_aux (123)
    en la izquierda: 54 55, en la derecha: 53
compound_stmt (124)
    en la izquierda: 56 57 58, en la derecha: 6
if_stmt (125)
    en la izquierda: 59, en la derecha: 56
if_stmt_aux (126)
    en la izquierda: 60 61, en la derecha: 59 60
s8 (127)
    en la izquierda: 62 63, en la derecha: 59 64 65
while_stmt (128)
    en la izquierda: 64, en la derecha: 57
for_stmt (129)
    en la izquierda: 65, en la derecha: 58
suite (130)
    en la izquierda: 66 67, en la derecha: 59 60 62 64 65
suite_aux (131)
    en la izquierda: 68 69, en la derecha: 67 68
s15 (132)
    en la izquierda: 70 71, en la derecha: 72
test (133)
    en la izquierda: 72, en la derecha: 37 38 40 42 59 60 64 70 133
    134
or_test (134)
    en la izquierda: 73, en la derecha: 70 72
or_test_aux (135)
    en la izquierda: 74 75, en la derecha: 73 74
and_test (136)
    en la izquierda: 76, en la derecha: 73 74
and_test_aux (137)
    en la izquierda: 77 78, en la derecha: 76 77
not_test (138)
    en la izquierda: 79 80, en la derecha: 76 77 79
comparison (139)
    en la izquierda: 81, en la derecha: 80
comparison_aux (140)
    en la izquierda: 82 83, en la derecha: 81 82
comp_op (141)
    en la izquierda: 84 85 86 87 88 89 90 91 92 93 94, en la derecha:
    82
expr (142)
    en la izquierda: 95, en la derecha: 81 82 130 131
expr_aux (143)
    en la izquierda: 96 97, en la derecha: 95 96
xor_expr (144)
    en la izquierda: 98, en la derecha: 95 96
xor_expr_aux (145)
    en la izquierda: 99 100, en la derecha: 98 99
and_expr (146)
    en la izquierda: 101, en la derecha: 98 99
and_expr_aux (147)
    en la izquierda: 102 103, en la derecha: 101 102
shift_expr (148)
    en la izquierda: 104, en la derecha: 101 102
shift_expr_aux (149)
    en la izquierda: 105 106 107, en la derecha: 104 105 106
arith_expr (150)
    en la izquierda: 108, en la derecha: 104 105 106
arith_expr_aux (151)
    en la izquierda: 109 110, en la derecha: 108 109
ae_aux (152)
    en la izquierda: 111 112, en la derecha: 109 120
term (153)
    en la izquierda: 113, en la derecha: 108 109
term_aux (154)
    en la izquierda: 114 115, en la derecha: 113 114
t_aux (155)
    en la izquierda: 116 117 118 119, en la derecha: 114
factor (156)
    en la izquierda: 120 121, en la derecha: 113 114 120
atom (157)
    en la izquierda: 122 123 124 125 126 127, en la derecha: 121
string_aux (158)
    en la izquierda: 128 129, en la derecha: 125 128
exprlist (159)
    en la izquierda: 130, en la derecha: 46 65
exprlist_aux (160)
    en la izquierda: 131 132, en la derecha: 130 131
testlist (161)
    en la izquierda: 133, en la derecha: 18 19 21 54 65
testlist_aux (162)
    en la izquierda: 134 135, en la derecha: 133 134


State 0

    0 $accept: . GOAL $end

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 2
    PRINT          desplazar e ir al estado 3
    FALSE          desplazar e ir al estado 4
    RETURN         desplazar e ir al estado 5
    CONTINUE       desplazar e ir al estado 6
    FOR            desplazar e ir al estado 7
    TRUE           desplazar e ir al estado 8
    WHILE          desplazar e ir al estado 9
    DEL            desplazar e ir al estado 10
    NOT            desplazar e ir al estado 11
    IF             desplazar e ir al estado 12
    PASS           desplazar e ir al estado 13
    BREAK          desplazar e ir al estado 14
    MENOS          desplazar e ir al estado 15
    MAS            desplazar e ir al estado 16
    ENTERO         desplazar e ir al estado 17
    FLOTANTE       desplazar e ir al estado 18

    $default  reduce usando la regla 4 (file_input)

    GOAL           ir al estado 19
    file_input     ir al estado 20
    stmt           ir al estado 21
    simple_stmt    ir al estado 22
    small_stmt     ir al estado 23
    expr_stmt      ir al estado 24
    print_stmt     ir al estado 25
    del_stmt       ir al estado 26
    pass_stmt      ir al estado 27
    flow_stmt      ir al estado 28
    break_stmt     ir al estado 29
    continue_stmt  ir al estado 30
    return_stmt    ir al estado 31
    compound_stmt  ir al estado 32
    if_stmt        ir al estado 33
    while_stmt     ir al estado 34
    for_stmt       ir al estado 35
    test           ir al estado 36
    or_test        ir al estado 37
    and_test       ir al estado 38
    not_test       ir al estado 39
    comparison     ir al estado 40
    expr           ir al estado 41
    xor_expr       ir al estado 42
    and_expr       ir al estado 43
    shift_expr     ir al estado 44
    arith_expr     ir al estado 45
    ae_aux         ir al estado 46
    term           ir al estado 47
    factor         ir al estado 48
    atom           ir al estado 49
    string_aux     ir al estado 50
    testlist       ir al estado 51


State 1

  129 string_aux: STRING .

    $default  reduce usando la regla 129 (string_aux)


State 2

  122 atom: IDENTIFICADOR .

    $default  reduce usando la regla 122 (atom)


State 3

   35 print_stmt: PRINT . s29

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 2
    FALSE          desplazar e ir al estado 4
    TRUE           desplazar e ir al estado 8
    NOT            desplazar e ir al estado 11
    DMAYOR         desplazar e ir al estado 52
    MENOS          desplazar e ir al estado 15
    MAS            desplazar e ir al estado 16
    ENTERO         desplazar e ir al estado 17
    FLOTANTE       desplazar e ir al estado 18

    $default  reduce usando la regla 39 (s30)

    s29         ir al estado 53
    s30         ir al estado 54
    test        ir al estado 55
    or_test     ir al estado 37
    and_test    ir al estado 38
    not_test    ir al estado 39
    comparison  ir al estado 40
    expr        ir al estado 41
    xor_expr    ir al estado 42
    and_expr    ir al estado 43
    shift_expr  ir al estado 44
    arith_expr  ir al estado 45
    ae_aux      ir al estado 46
    term        ir al estado 47
    factor      ir al estado 48
    atom        ir al estado 49
    string_aux  ir al estado 50


State 4

  127 atom: FALSE .

    $default  reduce usando la regla 127 (atom)


State 5

   53 return_stmt: RETURN . return_stmt_aux

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 2
    FALSE          desplazar e ir al estado 4
    TRUE           desplazar e ir al estado 8
    NOT            desplazar e ir al estado 11
    MENOS          desplazar e ir al estado 15
    MAS            desplazar e ir al estado 16
    ENTERO         desplazar e ir al estado 17
    FLOTANTE       desplazar e ir al estado 18

    $default  reduce usando la regla 55 (return_stmt_aux)

    return_stmt_aux  ir al estado 56
    test             ir al estado 36
    or_test          ir al estado 37
    and_test         ir al estado 38
    not_test         ir al estado 39
    comparison       ir al estado 40
    expr             ir al estado 41
    xor_expr         ir al estado 42
    and_expr         ir al estado 43
    shift_expr       ir al estado 44
    arith_expr       ir al estado 45
    ae_aux           ir al estado 46
    term             ir al estado 47
    factor           ir al estado 48
    atom             ir al estado 49
    string_aux       ir al estado 50
    testlist         ir al estado 57


State 6

   52 continue_stmt: CONTINUE .

    $default  reduce usando la regla 52 (continue_stmt)


State 7

   65 for_stmt: FOR . exprlist IN testlist DPUNTO suite s8

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 2
    FALSE          desplazar e ir al estado 4
    TRUE           desplazar e ir al estado 8
    MENOS          desplazar e ir al estado 15
    MAS            desplazar e ir al estado 16
    ENTERO         desplazar e ir al estado 17
    FLOTANTE       desplazar e ir al estado 18

    expr        ir al estado 58
    xor_expr    ir al estado 42
    and_expr    ir al estado 43
    shift_expr  ir al estado 44
    arith_expr  ir al estado 45
    ae_aux      ir al estado 46
    term        ir al estado 47
    factor      ir al estado 48
    atom        ir al estado 49
    string_aux  ir al estado 50
    exprlist    ir al estado 59


State 8

  126 atom: TRUE .

    $default  reduce usando la regla 126 (atom)


State 9

   64 while_stmt: WHILE . test DPUNTO suite s8

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 2
    FALSE          desplazar e ir al estado 4
    TRUE           desplazar e ir al estado 8
    NOT            desplazar e ir al estado 11
    MENOS          desplazar e ir al estado 15
    MAS            desplazar e ir al estado 16
    ENTERO         desplazar e ir al estado 17
    FLOTANTE       desplazar e ir al estado 18

    test        ir al estado 60
    or_test     ir al estado 37
    and_test    ir al estado 38
    not_test    ir al estado 39
    comparison  ir al estado 40
    expr        ir al estado 41
    xor_expr    ir al estado 42
    and_expr    ir al estado 43
    shift_expr  ir al estado 44
    arith_expr  ir al estado 45
    ae_aux      ir al estado 46
    term        ir al estado 47
    factor      ir al estado 48
    atom        ir al estado 49
    string_aux  ir al estado 50


State 10

   46 del_stmt: DEL . exprlist

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 2
    FALSE          desplazar e ir al estado 4
    TRUE           desplazar e ir al estado 8
    MENOS          desplazar e ir al estado 15
    MAS            desplazar e ir al estado 16
    ENTERO         desplazar e ir al estado 17
    FLOTANTE       desplazar e ir al estado 18

    expr        ir al estado 58
    xor_expr    ir al estado 42
    and_expr    ir al estado 43
    shift_expr  ir al estado 44
    arith_expr  ir al estado 45
    ae_aux      ir al estado 46
    term        ir al estado 47
    factor      ir al estado 48
    atom        ir al estado 49
    string_aux  ir al estado 50
    exprlist    ir al estado 61


State 11

   79 not_test: NOT . not_test

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 2
    FALSE          desplazar e ir al estado 4
    TRUE           desplazar e ir al estado 8
    NOT            desplazar e ir al estado 11
    MENOS          desplazar e ir al estado 15
    MAS            desplazar e ir al estado 16
    ENTERO         desplazar e ir al estado 17
    FLOTANTE       desplazar e ir al estado 18

    not_test    ir al estado 62
    comparison  ir al estado 40
    expr        ir al estado 41
    xor_expr    ir al estado 42
    and_expr    ir al estado 43
    shift_expr  ir al estado 44
    arith_expr  ir al estado 45
    ae_aux      ir al estado 46
    term        ir al estado 47
    factor      ir al estado 48
    atom        ir al estado 49
    string_aux  ir al estado 50


State 12

   59 if_stmt: IF . test DPUNTO suite if_stmt_aux s8
